--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -534,6 +535,11 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+
+.portfolio p {
+  margin-bottom: 16px;
+}
+
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
